grammar/antlr3/CelloParser.java
// $ANTLR 3.5.2 Cello.g 2016-08-01 17:02:04

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class CelloParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BlockComment", "DIGIT", "IntegerLiteral", 
		"LineComment", "NAME", "NONZERODIGIT", "STRING_CONTENT", "StringLiteral", 
		"W", "WhiteSpace", "'!'", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", 
		"'++'", "','", "'-'", "'--'", "'/'", "';'", "'<'", "'='", "'=='", "'>'", 
		"'boolean'", "'else'", "'false'", "'for'", "'if'", "'int'", "'return'", 
		"'string'", "'true'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int BlockComment=4;
	public static final int DIGIT=5;
	public static final int IntegerLiteral=6;
	public static final int LineComment=7;
	public static final int NAME=8;
	public static final int NONZERODIGIT=9;
	public static final int STRING_CONTENT=10;
	public static final int StringLiteral=11;
	public static final int W=12;
	public static final int WhiteSpace=13;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CelloParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CelloParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return CelloParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Cello.g"; }



	// $ANTLR start "topLevel"
	// Cello.g:5:1: topLevel : declaration ;
	public final void topLevel() throws RecognitionException {
		try {
			// Cello.g:5:9: ( declaration )
			// Cello.g:5:11: declaration
			{
			pushFollow(FOLLOW_declaration_in_topLevel17);
			declaration();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "topLevel"



	// $ANTLR start "declaration"
	// Cello.g:39:1: declaration : ( functionDeclaration | variableDeclaration );
	public final void declaration() throws RecognitionException {
		try {
			// Cello.g:39:12: ( functionDeclaration | variableDeclaration )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==31||LA1_0==36||LA1_0==38) ) {
				int LA1_1 = input.LA(2);
				if ( (LA1_1==NAME) ) {
					int LA1_2 = input.LA(3);
					if ( (LA1_2==17) ) {
						alt1=1;
					}
					else if ( (LA1_2==22||LA1_2==26||LA1_2==28) ) {
						alt1=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 1, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// Cello.g:39:14: functionDeclaration
					{
					pushFollow(FOLLOW_functionDeclaration_in_declaration299);
					functionDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// Cello.g:40:14: variableDeclaration
					{
					pushFollow(FOLLOW_variableDeclaration_in_declaration314);
					variableDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "functionDeclaration"
	// Cello.g:43:1: functionDeclaration : type NAME '(' functionParamList ')' block ;
	public final void functionDeclaration() throws RecognitionException {
		try {
			// Cello.g:43:20: ( type NAME '(' functionParamList ')' block )
			// Cello.g:43:22: type NAME '(' functionParamList ')' block
			{
			pushFollow(FOLLOW_type_in_functionDeclaration333);
			type();
			state._fsp--;
			if (state.failed) return;
			match(input,NAME,FOLLOW_NAME_in_functionDeclaration335); if (state.failed) return;
			match(input,17,FOLLOW_17_in_functionDeclaration337); if (state.failed) return;
			pushFollow(FOLLOW_functionParamList_in_functionDeclaration339);
			functionParamList();
			state._fsp--;
			if (state.failed) return;
			match(input,18,FOLLOW_18_in_functionDeclaration341); if (state.failed) return;
			pushFollow(FOLLOW_block_in_functionDeclaration343);
			block();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionDeclaration"



	// $ANTLR start "functionParamList"
	// Cello.g:45:1: functionParamList : ( functionParam ( ',' functionParam )* )? ;
	public final void functionParamList() throws RecognitionException {
		try {
			// Cello.g:45:18: ( ( functionParam ( ',' functionParam )* )? )
			// Cello.g:45:20: ( functionParam ( ',' functionParam )* )?
			{
			// Cello.g:45:20: ( functionParam ( ',' functionParam )* )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==31||LA3_0==36||LA3_0==38) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// Cello.g:45:21: functionParam ( ',' functionParam )*
					{
					pushFollow(FOLLOW_functionParam_in_functionParamList370);
					functionParam();
					state._fsp--;
					if (state.failed) return;
					// Cello.g:45:35: ( ',' functionParam )*
					loop2:
					while (true) {
						int alt2=2;
						int LA2_0 = input.LA(1);
						if ( (LA2_0==22) ) {
							alt2=1;
						}

						switch (alt2) {
						case 1 :
							// Cello.g:45:36: ',' functionParam
							{
							match(input,22,FOLLOW_22_in_functionParamList373); if (state.failed) return;
							pushFollow(FOLLOW_functionParam_in_functionParamList375);
							functionParam();
							state._fsp--;
							if (state.failed) return;
							}
							break;

						default :
							break loop2;
						}
					}

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionParamList"



	// $ANTLR start "functionParam"
	// Cello.g:47:1: functionParam : type NAME ;
	public final void functionParam() throws RecognitionException {
		try {
			// Cello.g:47:14: ( type NAME )
			// Cello.g:47:16: type NAME
			{
			pushFollow(FOLLOW_type_in_functionParam403);
			type();
			state._fsp--;
			if (state.failed) return;
			match(input,NAME,FOLLOW_NAME_in_functionParam405); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functionParam"



	// $ANTLR start "variableDeclaration"
	// Cello.g:50:1: variableDeclaration : type variableList ';' ;
	public final void variableDeclaration() throws RecognitionException {
		try {
			// Cello.g:50:20: ( type variableList ';' )
			// Cello.g:50:22: type variableList ';'
			{
			pushFollow(FOLLOW_type_in_variableDeclaration426);
			type();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_variableList_in_variableDeclaration428);
			variableList();
			state._fsp--;
			if (state.failed) return;
			match(input,26,FOLLOW_26_in_variableDeclaration430); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "variableDeclaration"



	// $ANTLR start "variableList"
	// Cello.g:52:1: variableList : initDecl ( ',' initDecl )* ;
	public final void variableList() throws RecognitionException {
		try {
			// Cello.g:52:13: ( initDecl ( ',' initDecl )* )
			// Cello.g:52:15: initDecl ( ',' initDecl )*
			{
			pushFollow(FOLLOW_initDecl_in_variableList456);
			initDecl();
			state._fsp--;
			if (state.failed) return;
			// Cello.g:52:24: ( ',' initDecl )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==22) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// Cello.g:52:25: ',' initDecl
					{
					match(input,22,FOLLOW_22_in_variableList459); if (state.failed) return;
					pushFollow(FOLLOW_initDecl_in_variableList461);
					initDecl();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "variableList"



	// $ANTLR start "initDecl"
	// Cello.g:54:1: initDecl : NAME ( '=' initializer )? ;
	public final void initDecl() throws RecognitionException {
		try {
			// Cello.g:54:9: ( NAME ( '=' initializer )? )
			// Cello.g:54:11: NAME ( '=' initializer )?
			{
			match(input,NAME,FOLLOW_NAME_in_initDecl482); if (state.failed) return;
			// Cello.g:54:16: ( '=' initializer )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==28) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// Cello.g:54:17: '=' initializer
					{
					match(input,28,FOLLOW_28_in_initDecl485); if (state.failed) return;
					pushFollow(FOLLOW_initializer_in_initDecl487);
					initializer();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "initDecl"



	// $ANTLR start "initializer"
	// Cello.g:56:1: initializer : expression ;
	public final void initializer() throws RecognitionException {
		try {
			// Cello.g:56:12: ( expression )
			// Cello.g:56:14: expression
			{
			pushFollow(FOLLOW_expression_in_initializer504);
			expression();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "initializer"



	// $ANTLR start "type"
	// Cello.g:60:1: type : primitiveType ;
	public final void type() throws RecognitionException {
		try {
			// Cello.g:60:5: ( primitiveType )
			// Cello.g:60:7: primitiveType
			{
			pushFollow(FOLLOW_primitiveType_in_type524);
			primitiveType();
			state._fsp--;
			if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "primitiveType"
	// Cello.g:62:1: primitiveType : ( 'int' | 'string' | 'boolean' );
	public final void primitiveType() throws RecognitionException {
		try {
			// Cello.g:62:14: ( 'int' | 'string' | 'boolean' )
			// Cello.g:
			{
			if ( input.LA(1)==31||input.LA(1)==36||input.LA(1)==38 ) {
				input.consume();
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "primitiveType"



	// $ANTLR start "block"
	// Cello.g:68:1: block : '{' ( statement | declaration )* '}' ;
	public final void block() throws RecognitionException {
		try {
			// Cello.g:68:6: ( '{' ( statement | declaration )* '}' )
			// Cello.g:68:8: '{' ( statement | declaration )* '}'
			{
			match(input,40,FOLLOW_40_in_block591); if (state.failed) return;
			// Cello.g:68:12: ( statement | declaration )*
			loop6:
			while (true) {
				int alt6=3;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==IntegerLiteral||LA6_0==NAME||LA6_0==StringLiteral||LA6_0==14||LA6_0==17||LA6_0==21||LA6_0==24||LA6_0==26||(LA6_0 >= 33 && LA6_0 <= 35)||LA6_0==37||(LA6_0 >= 39 && LA6_0 <= 40)) ) {
					alt6=1;
				}
				else if ( (LA6_0==31||LA6_0==36||LA6_0==38) ) {
					alt6=2;
				}

				switch (alt6) {
				case 1 :
					// Cello.g:68:13: statement
					{
					pushFollow(FOLLOW_statement_in_block594);
					statement();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// Cello.g:68:23: declaration
					{
					pushFollow(FOLLOW_declaration_in_block596);
					declaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop6;
				}
			}

			match(input,42,FOLLOW_42_in_block600); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "block"



	// $ANTLR start "statement"
	// Cello.g:70:1: statement : ( block | 'if' '(' expression ')' block ( 'else' block )? | 'return' ( expression )? ';' | 'for' '(' ( expression )? ';' ( expression )? ';' ( expression )? ')' block | 'for' '(' variableDeclaration ( expression )? ';' ( expression )? ')' block | expression ';' | ';' );
	public final void statement() throws RecognitionException {
		try {
			// Cello.g:70:10: ( block | 'if' '(' expression ')' block ( 'else' block )? | 'return' ( expression )? ';' | 'for' '(' ( expression )? ';' ( expression )? ';' ( expression )? ')' block | 'for' '(' variableDeclaration ( expression )? ';' ( expression )? ')' block | expression ';' | ';' )
			int alt14=7;
			switch ( input.LA(1) ) {
			case 40:
				{
				alt14=1;
				}
				break;
			case 35:
				{
				alt14=2;
				}
				break;
			case 37:
				{
				alt14=3;
				}
				break;
			case 34:
				{
				int LA14_4 = input.LA(2);
				if ( (LA14_4==17) ) {
					int LA14_7 = input.LA(3);
					if ( (LA14_7==IntegerLiteral||LA14_7==NAME||LA14_7==StringLiteral||LA14_7==14||LA14_7==17||LA14_7==21||LA14_7==24||LA14_7==26||LA14_7==33||LA14_7==39) ) {
						alt14=4;
					}
					else if ( (LA14_7==31||LA14_7==36||LA14_7==38) ) {
						alt14=5;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 14, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 14, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case IntegerLiteral:
			case NAME:
			case StringLiteral:
			case 14:
			case 17:
			case 21:
			case 24:
			case 33:
			case 39:
				{
				alt14=6;
				}
				break;
			case 26:
				{
				alt14=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 14, 0, input);
				throw nvae;
			}
			switch (alt14) {
				case 1 :
					// Cello.g:70:12: block
					{
					pushFollow(FOLLOW_block_in_statement612);
					block();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// Cello.g:71:12: 'if' '(' expression ')' block ( 'else' block )?
					{
					match(input,35,FOLLOW_35_in_statement625); if (state.failed) return;
					match(input,17,FOLLOW_17_in_statement627); if (state.failed) return;
					pushFollow(FOLLOW_expression_in_statement629);
					expression();
					state._fsp--;
					if (state.failed) return;
					match(input,18,FOLLOW_18_in_statement631); if (state.failed) return;
					pushFollow(FOLLOW_block_in_statement633);
					block();
					state._fsp--;
					if (state.failed) return;
					// Cello.g:71:42: ( 'else' block )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==32) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// Cello.g:71:44: 'else' block
							{
							match(input,32,FOLLOW_32_in_statement637); if (state.failed) return;
							pushFollow(FOLLOW_block_in_statement639);
							block();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					}
					break;
				case 3 :
					// Cello.g:72:12: 'return' ( expression )? ';'
					{
					match(input,37,FOLLOW_37_in_statement655); if (state.failed) return;
					// Cello.g:72:21: ( expression )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==IntegerLiteral||LA8_0==NAME||LA8_0==StringLiteral||LA8_0==14||LA8_0==17||LA8_0==21||LA8_0==24||LA8_0==33||LA8_0==39) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// Cello.g:72:21: expression
							{
							pushFollow(FOLLOW_expression_in_statement657);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,26,FOLLOW_26_in_statement660); if (state.failed) return;
					}
					break;
				case 4 :
					// Cello.g:73:12: 'for' '(' ( expression )? ';' ( expression )? ';' ( expression )? ')' block
					{
					match(input,34,FOLLOW_34_in_statement673); if (state.failed) return;
					match(input,17,FOLLOW_17_in_statement675); if (state.failed) return;
					// Cello.g:73:22: ( expression )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==IntegerLiteral||LA9_0==NAME||LA9_0==StringLiteral||LA9_0==14||LA9_0==17||LA9_0==21||LA9_0==24||LA9_0==33||LA9_0==39) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// Cello.g:73:22: expression
							{
							pushFollow(FOLLOW_expression_in_statement677);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,26,FOLLOW_26_in_statement680); if (state.failed) return;
					// Cello.g:73:38: ( expression )?
					int alt10=2;
					int LA10_0 = input.LA(1);
					if ( (LA10_0==IntegerLiteral||LA10_0==NAME||LA10_0==StringLiteral||LA10_0==14||LA10_0==17||LA10_0==21||LA10_0==24||LA10_0==33||LA10_0==39) ) {
						alt10=1;
					}
					switch (alt10) {
						case 1 :
							// Cello.g:73:38: expression
							{
							pushFollow(FOLLOW_expression_in_statement682);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,26,FOLLOW_26_in_statement685); if (state.failed) return;
					// Cello.g:73:54: ( expression )?
					int alt11=2;
					int LA11_0 = input.LA(1);
					if ( (LA11_0==IntegerLiteral||LA11_0==NAME||LA11_0==StringLiteral||LA11_0==14||LA11_0==17||LA11_0==21||LA11_0==24||LA11_0==33||LA11_0==39) ) {
						alt11=1;
					}
					switch (alt11) {
						case 1 :
							// Cello.g:73:54: expression
							{
							pushFollow(FOLLOW_expression_in_statement687);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,18,FOLLOW_18_in_statement690); if (state.failed) return;
					pushFollow(FOLLOW_block_in_statement692);
					block();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// Cello.g:74:12: 'for' '(' variableDeclaration ( expression )? ';' ( expression )? ')' block
					{
					match(input,34,FOLLOW_34_in_statement705); if (state.failed) return;
					match(input,17,FOLLOW_17_in_statement707); if (state.failed) return;
					pushFollow(FOLLOW_variableDeclaration_in_statement709);
					variableDeclaration();
					state._fsp--;
					if (state.failed) return;
					// Cello.g:74:42: ( expression )?
					int alt12=2;
					int LA12_0 = input.LA(1);
					if ( (LA12_0==IntegerLiteral||LA12_0==NAME||LA12_0==StringLiteral||LA12_0==14||LA12_0==17||LA12_0==21||LA12_0==24||LA12_0==33||LA12_0==39) ) {
						alt12=1;
					}
					switch (alt12) {
						case 1 :
							// Cello.g:74:42: expression
							{
							pushFollow(FOLLOW_expression_in_statement711);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,26,FOLLOW_26_in_statement714); if (state.failed) return;
					// Cello.g:74:58: ( expression )?
					int alt13=2;
					int LA13_0 = input.LA(1);
					if ( (LA13_0==IntegerLiteral||LA13_0==NAME||LA13_0==StringLiteral||LA13_0==14||LA13_0==17||LA13_0==21||LA13_0==24||LA13_0==33||LA13_0==39) ) {
						alt13=1;
					}
					switch (alt13) {
						case 1 :
							// Cello.g:74:58: expression
							{
							pushFollow(FOLLOW_expression_in_statement716);
							expression();
							state._fsp--;
							if (state.failed) return;
							}
							break;

					}

					match(input,18,FOLLOW_18_in_statement719); if (state.failed) return;
					pushFollow(FOLLOW_block_in_statement721);
					block();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// Cello.g:75:12: expression ';'
					{
					pushFollow(FOLLOW_expression_in_statement734);
					expression();
					state._fsp--;
					if (state.failed) return;
					match(input,26,FOLLOW_26_in_statement736); if (state.failed) return;
					}
					break;
				case 7 :
					// Cello.g:76:12: ';'
					{
					match(input,26,FOLLOW_26_in_statement749); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"



	// $ANTLR start "expression"
	// Cello.g:80:1: expression : assignmentExpression ( ',' assignmentExpression )* ;
	public final void expression() throws RecognitionException {
		try {
			// Cello.g:80:11: ( assignmentExpression ( ',' assignmentExpression )* )
			// Cello.g:80:13: assignmentExpression ( ',' assignmentExpression )*
			{
			pushFollow(FOLLOW_assignmentExpression_in_expression767);
			assignmentExpression();
			state._fsp--;
			if (state.failed) return;
			// Cello.g:80:34: ( ',' assignmentExpression )*
			loop15:
			while (true) {
				int alt15=2;
				int LA15_0 = input.LA(1);
				if ( (LA15_0==22) ) {
					int LA15_1 = input.LA(2);
					if ( (synpred23_Cello()) ) {
						alt15=1;
					}

				}

				switch (alt15) {
				case 1 :
					// Cello.g:80:35: ',' assignmentExpression
					{
					match(input,22,FOLLOW_22_in_expression770); if (state.failed) return;
					pushFollow(FOLLOW_assignmentExpression_in_expression772);
					assignmentExpression();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop15;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "expression"



	// $ANTLR start "assignmentExpression"
	// Cello.g:81:1: assignmentExpression : ( unaryExpression '=' assignmentExpression | conditionalExpression );
	public final void assignmentExpression() throws RecognitionException {
		try {
			// Cello.g:81:21: ( unaryExpression '=' assignmentExpression | conditionalExpression )
			int alt16=2;
			switch ( input.LA(1) ) {
			case 17:
				{
				int LA16_1 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			case IntegerLiteral:
			case StringLiteral:
			case 33:
			case 39:
				{
				int LA16_2 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			case NAME:
				{
				int LA16_3 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			case 21:
				{
				int LA16_4 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			case 24:
				{
				int LA16_5 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			case 14:
				{
				int LA16_6 = input.LA(2);
				if ( (synpred24_Cello()) ) {
					alt16=1;
				}
				else if ( (true) ) {
					alt16=2;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}
			switch (alt16) {
				case 1 :
					// Cello.g:81:23: unaryExpression '=' assignmentExpression
					{
					pushFollow(FOLLOW_unaryExpression_in_assignmentExpression780);
					unaryExpression();
					state._fsp--;
					if (state.failed) return;
					match(input,28,FOLLOW_28_in_assignmentExpression782); if (state.failed) return;
					pushFollow(FOLLOW_assignmentExpression_in_assignmentExpression784);
					assignmentExpression();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// Cello.g:82:23: conditionalExpression
					{
					pushFollow(FOLLOW_conditionalExpression_in_assignmentExpression808);
					conditionalExpression();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "assignmentExpression"



	// $ANTLR start "conditionalExpression"
	// Cello.g:84:1: conditionalExpression : equalityExpression ( ( '||' | '&&' ) equalityExpression )* ;
	public final void conditionalExpression() throws RecognitionException {
		try {
			// Cello.g:84:22: ( equalityExpression ( ( '||' | '&&' ) equalityExpression )* )
			// Cello.g:84:24: equalityExpression ( ( '||' | '&&' ) equalityExpression )*
			{
			pushFollow(FOLLOW_equalityExpression_in_conditionalExpression835);
			equalityExpression();
			state._fsp--;
			if (state.failed) return;
			// Cello.g:84:43: ( ( '||' | '&&' ) equalityExpression )*
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( (LA17_0==16||LA17_0==41) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// Cello.g:84:44: ( '||' | '&&' ) equalityExpression
					{
					if ( input.LA(1)==16||input.LA(1)==41 ) {
						input.consume();
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_equalityExpression_in_conditionalExpression846);
					equalityExpression();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop17;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "conditionalExpression"



	// $ANTLR start "equalityExpression"
	// Cello.g:85:1: equalityExpression : relationalExpression ( ( '==' | '!=' ) relationalExpression )* ;
	public final void equalityExpression() throws RecognitionException {
		try {
			// Cello.g:85:19: ( relationalExpression ( ( '==' | '!=' ) relationalExpression )* )
			// Cello.g:85:21: relationalExpression ( ( '==' | '!=' ) relationalExpression )*
			{
			pushFollow(FOLLOW_relationalExpression_in_equalityExpression854);
			relationalExpression();
			state._fsp--;
			if (state.failed) return;
			// Cello.g:85:42: ( ( '==' | '!=' ) relationalExpression )*
			loop18:
			while (true) {
				int alt18=2;
				int LA18_0 = input.LA(1);
				if ( (LA18_0==15||LA18_0==29) ) {
					alt18=1;
				}
